Fiks bug hvor varsel overlapper dropdown

--- a/packages/frontend/components/UserMenu.module.css
+++ b/packages/frontend/components/UserMenu.module.css
@@ -1,5 +1,6 @@
 .UserMenu {
     width: max-content;
+    z-index: 1001;
 }
 
 .MenuItem {
